# corkscrew

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  config.h.in  configure.ac  corkscrew.c  pipeline.yml
.github/workflows/: c-cpp.yml
go/: Makefile  corkscrew.go  example_ssh_config  go.mod  parser.go
